# DynNav

./: .dockerignore  .pre-commit-config.yaml  AUDIT.md  BLOCKERS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_GR.md  README_GREEK.md  READMEbig.md  RELEASE_NOTES.md  REPRODUCIBILITY_REPORT.md  SECURITY.md  STATUS.yaml  WORK_LOG.md  docker-compose.yml  ellhnika.md  index.html  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.github/ISSUE_TEMPLATE/: benchmark_result.md  research_module_upgrade.md
.github/workflows/: ci.yml  contributions.yml  documentation.yml  pages.yml  streamlit-dashboard.yml  trust-aware-cvar.yml
.streamlit/: config.toml
app/: README.md  dashboard.py
app/dynnav_dashboard/: __init__.py
app/pages/: 01_Home.py  02_Robot_Lab.py  03_Scenario_Builder.py  (+11 more)
assets/: README.md
benchmarks/: README.md  __init__.py  dynnav_benchmark_manifest.yaml
configs/: README.md  benchmark.yaml  blocked_path.yaml  default.yaml  dynamic_corridor.yaml  high_uncertainty.yaml  mapping.yaml  narrow_passage.yaml  recoverability_failure.yaml  research_suite.yaml  risk_aware_vs_shortest_path.yaml  static_maze.yaml  unknown_map.yaml  warehouse.yaml
contributions/: .cleanup-marker  .cleanup_marker  CLEANUP_STATUS.md  CONTRIBUTION_NUMBERING.md  README.md  README_STANDALONE_POLICY.md  STANDALONE_README_TEMPLATE.md
docs/: AUTONOMOUS_REPAIR_AUDIT.md  BENCHMARK_PROTOCOL.md  BENCHMARK_RESULTS_SUMMARY.md  CLAIMS_EVIDENCE.md  CONTRIBUTION_DEPENDENCY_GRAPH.md  CONTRIBUTION_FEATURE_CATALOG.md  CONTRIBUTION_INDEX.md  CONTRIBUTION_MATURITY_MATRIX.md  CONTRIBUTION_READINESS_CHECKLIST.md  CONTRIBUTION_VISUAL_GALLERY.md  DYNAMIC_REROUTING.md  DYNNAV_V2_RESEARCH_ROADMAP.md  ENGINEERING_AND_SCIENTIFIC_AUDIT.md  EVALUATION_PROTOCOL.md  Irreversibility_Aware_Navigation_New_Contribution.md  MAPPING.md  MARKDOWN_AUDIT.md  MARKDOWN_STYLE_GUIDE.md  MATHEMATICAL_FORMULATION.md  NAVIGATION_PIPELINE.md  README.md  README_LAB_GRADE_UPGRADE.md  RECOVERABILITY.md  REPOSITORY_AUDIT.md  REPRODUCIBILITY.md  RESEARCH_CONTRIBUTION.md  RESEARCH_OVERVIEW.md  RISK_AWARE_PLANNING.md  RISK_ESTIMATION.md  ROADMAP.md  ROS2_NAV2_INTEGRATION.md  SAFETY_SUPERVISOR.md  SYSTEM_ARCHITECTURE.md  UNCERTAINTY_MODEL.md
dynnav/: __init__.py
lidar_ros2/: readme
paper/: LITERATURE_EVIDENCE_MATRIX.csv  LITERATURE_GAP_ANALYSIS.md  MANUSCRIPT_DRAFT.md  README.md  RECOVERABILITY_METRIC.md  RESEARCH_PLAN.md  REVIEW_PROTOCOL.md  abstract.md  contributions.md  future_work.md
results/: README.md  example_benchmark_results.csv
ros2_ws/src/dynnav_nav2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/dynnav_nav2/config/: dynnav_planner_bridge.yaml
ros2_ws/src/dynnav_nav2/docs/: NAV2_PLUGIN_ARCHITECTURE.md  OCCUPANCY_GRID_CONVERSION.md  PLANNING_REQUEST_INTERFACE.md
ros2_ws/src/dynnav_nav2/dynnav_nav2/: __init__.py  dynnav_planner_bridge.py  live_map_planning.py  occupancy_grid_conversion.py  path_conversion.py  request_format.py
ros2_ws/src/dynnav_nav2/launch/: dynnav_planner_bridge.launch.py
ros2_ws/src/dynnav_nav2_cpp/: CMakeLists.txt  README.md  dynnav_global_planner_plugin.xml  package.xml
ros2_ws/src/dynnav_nav2_cpp/docs/: COSTMAP_ADAPTER.md
ros2_ws/src/dynnav_nav2_cpp/include/dynnav_nav2_cpp/: costmap_adapter.hpp  dynnav_global_planner.hpp
ros2_ws/src/dynnav_nav2_cpp/src/: costmap_adapter.cpp  dynnav_global_planner.cpp
scripts/: README.md  audit_contributions.py  audit_markdown.py  audit_markdown_tree.py  build_documentation_index.py  evaluate_experiment.py  generate_contribution_programme_artifacts.py  generate_figures.py  generate_research_assets.py  make_demo_gif.py  markdown_audit_core.py  markdown_audit_runtime.py  run_all.py  run_benchmarks.py  run_experiment.py  run_ids_cost_shaping_demo_real.py  run_research_suite.py  run_risk_weighted_on_bottleneck.py  run_synthetic_demo.py  test_ids_ukf.py  test_world_templates.py  validate_contribution_registry.py  validate_documented_commands.py  validate_markdown_assets.py  validate_markdown_links.py  validate_streamlit_app.py
src/: README.md
tests/: README.md  test_02_uncertainty.py  test_contribution_programme_artifacts.py  test_contribution_registry.py  test_contribution_visual_assets.py  test_dashboard_registry_alignment.py  test_dynamic_randomized_benchmark.py  test_dynamic_self_aware_astar.py  test_dynamic_statistical_analysis.py  test_dynnav.py  test_dynnav_smoke.py  test_lab_grade.py  test_mapping_occupancy_grid.py  test_markdown_audit_resilience.py  test_planning.py  test_predictive_risk_maps.py  test_realtime_replanning.py  test_recharge_planner.py  test_research_modules.py  test_research_pipeline_phase2.py  test_ros2_live_map_planning.py  test_ros2_occupancy_grid_conversion.py  test_ros2_path_conversion.py  test_ros2_planner_bridge_helpers.py  test_ros2_request_format.py  test_self_aware_astar.py  test_self_aware_astar_plotting.py  test_self_aware_astar_randomized_benchmark.py  test_self_aware_astar_statistical_analysis.py  test_self_aware_core.py  test_streamlit_lab_smoke.py
tools/: generate_benchmark_summary.py
vercel_app/: package.json  tsconfig.json
website/: README.md  package.json  tailwind.config.ts  tsconfig.json
(+345 files in other folders)
