[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dynnav"
version = "0.1.0"
description = "Risk-aware dynamic navigation and rerouting prototypes for unknown environments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Panagiota Grosdouli"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff==0.5.7",
  "black>=24,<26",
  "mypy>=1.10,<2",
]
web = []

[project.scripts]
dynnav-benchmark = "dynnav.benchmarks:main"
dynnav-demo = "dynnav.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dynnav", "src/dynnav_dashboard"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402", "E501", "F401", "F841", "I001"]
"tests/**/*.py" = ["E402", "E501", "F401", "F841", "I001"]
"src/dynnav/__init__.py" = ["I001"]
"src/dynnav/benchmarks.py" = ["I001"]
"src/dynnav/research_pipeline.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "--cov=dynnav --cov-report=term-missing"
