<?xml version="1.0"?>
<package format="3">
  <name>dynnav_nav2</name>
  <version>0.1.0</version>
  <description>ROS 2 integration scaffold for DynNav planners and future Nav2 plugins.</description>
  <maintainer email="maintainer@example.com">DynNav maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
