<?xml version="1.0"?>
<package format="3">
  <name>dynnav_nav2_cpp</name>
  <version>0.1.0</version>
  <description>C++ Nav2 plugin skeleton for DynNav global planning.</description>
  <maintainer email="maintainer@example.com">DynNav maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="dynnav_global_planner_plugin.xml" />
  </export>
</package>
